<resources>
    <string name="app_name">RU</string>
    <string name="matricula">Matrícula</string>
    <string name="consulta">CONSULTA</string>
    <string name="autenticacao_do_usuario">Autenticação do usuário</string>
    <string name="senha">Senha</string>
    <string name="consultar">consultar</string>
    <string name="_26_09_segunda_feira">26/09 SEGUNDA-FEIRA</string>
    <string name="almoco">Almoço</string>
    <string name="jantar">Jantar</string>
    <string name="_07_00_09_00">07:00 - 09:00</string>
    <string name="_11_00_14_30">11:00 - 14:30</string>
    <string name="_17_00_19_30">17:00 - 19:30</string>
    <string name="desjejum">Desjejum</string>
</resources>
