<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="andreluis.ru.LoginActivity"
    android:background="#fefbfb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matricula"
        android:id="@+id/Matricula"
        android:textSize="24sp"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/AutUsu"
        android:layout_alignStart="@+id/AutUsu" />

    <TextView
        android:layout_width="10000sp"
        android:layout_height="40sp"
        android:text="@string/consulta"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="#fdfbfb"
        android:layout_alignParentTop="true"
        android:background="#E7470D"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autenticacao_do_usuario"
        android:textColor="#fc0101"
        android:id="@+id/AutUsu"
        android:layout_marginTop="59dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/CampoMatricula" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Senha"
        android:text="@string/senha"
        android:textSize="24sp"
        android:layout_above="@+id/button"
        android:layout_alignStart="@+id/Matricula" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/CampoMatricula"
        android:layout_alignBottom="@+id/Matricula"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/CampoSenha"
        android:layout_below="@+id/CampoMatricula"
        android:layout_alignStart="@+id/CampoMatricula" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="24sp"
        android:text="@string/consultar"
        android:id="@+id/button"
        android:layout_alignEnd="@+id/CampoSenha"
        android:layout_alignParentStart="true"
        android:background="#E7470D"
        android:textSize="12sp"
        android:layout_below="@+id/CampoSenha"
        android:onClick="startActivityHome"
        android:textColor="#fcfafa" />

</RelativeLayout>
